feat. 데이터 대량 추가 및 에러 페이지 생성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,15 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        jdbc:
+          batch_size: 10000
+
+  batch:
+    # ?????? ?? ? ???? Job ???? ???
+    job:
+      enabled: false
+
+
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
