--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         format_sql: true
@@ -18,6 +18,8 @@ spring:
     # ?????? ?? ? ???? Job ???? ???
     job:
       enabled: false
+    jdbc:
+      initialize-schema: never
 
 
 springdoc:
